parte di back un po' più carina

--- a/public/css/back.css
+++ b/public/css/back.css
@@ -12657,3 +12657,27 @@ fieldset:disabled .btn {
   max-width: 100%;
 }
 
+#nav-deliveboo {
+  background-color: #00ccbc;
+}
+
+.img-height {
+  height: 315px;
+}
+
+#restaurant-card {
+  border: 1px solid #00ccbc;
+}
+
+#restaurant-card .celeste {
+  background-color: #00ccbc;
+}
+
+.border-backg {
+  border: 1px solid #00ccbc;
+}
+
+.vh-height {
+  height: 80vh;
+}
+
