--- a/resources/sass/back.scss
+++ b/resources/sass/back.scss
@@ -33,3 +33,27 @@
 .max-width {
     max-width: 100%;
 }
+
+#nav-deliveboo {
+    background-color: #00ccbc;
+    
+}
+
+.img-height {
+    height: 315px;
+}
+
+#restaurant-card{
+    border: 1px solid #00ccbc;
+    .celeste{
+        background-color: #00ccbc;
+    }
+}
+
+.border-backg {
+    border: 1px solid #00ccbc;
+}
+
+.vh-height {
+    height: 80vh;
+}
