--- a/public/css/back.css
+++ b/public/css/back.css
@@ -12632,6 +12632,7 @@ fieldset:disabled .btn {
   position: fixed;
   inset: 0;
   background-color: rgba(0, 0, 0, 0.4);
+  z-index: 10000;
 }
 
 .overlay .popup {
