--- a/resources/sass/back.scss
+++ b/resources/sass/back.scss
@@ -40,11 +40,11 @@
 
 }
 
-.img-height {
-    object-fit: cover;
-    width: 100%;
-    height: 315px;
-}
+// .img-height {
+//     object-fit: cover;
+//     width: 100%;
+//     height: 100%;
+// }
 
 #restaurant-card{
     border: 1px solid #00ccbc;
