sistemati bottoni e grandezza immagini

--- a/resources/sass/back.scss
+++ b/resources/sass/back.scss
@@ -60,3 +60,15 @@
 .vh-height {
     height: 80vh;
 }
+// pagina piatti ristorante
+.img-dish{
+    min-height: 250px;
+    max-height: 250px;
+    object-fit: cover;
+    border-radius: 20px;
+    margin-bottom: 20px;
+}
+
+.bt-size {
+    width: 80px;
+}
